--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.9",
         "mcamara/laravel-localization": "^2.3",
+        "predis/predis": "^3.3",
         "spatie/laravel-permission": "^6.24"
     },
     "require-dev": {
